@@ -293,9 +293,9 @@ ltebr,"load and test short bfp",implemented,
 lcxbr,"load complement extended bfp",implemented,
 lcdbr,"load complement long bfp",implemented,
 lcebr,"load complement short bfp",implemented,
-fixbr,"load fp integer extended bfp","not implemented",
-fidbr,"load fp integer long bfp","implemented",
-fiebr,"load fp integer short bfp","implemented",
+fixbr,"load fp integer extended bfp",implemented,
+fidbr,"load fp integer long bfp",implemented,
+fiebr,"load fp integer short bfp",implemented,
 lfpc,"load fpc",implemented,
 lxdbr,"load lengthened long to extended bfp",implemented,
 lxdb,"load lengthened long to extended bfp",implemented,
